Code organization and checking for SSE support (let's pretend we support ARM for a bit)

--- a/base/CMakeLists.txt
+++ b/base/CMakeLists.txt
@@ -52,6 +52,7 @@ add_library(AzAudio STATIC
 	src/AzAudio/helpers.h
 	src/AzAudio/helpers.c
 	src/AzAudio/math.h
+	src/AzAudio/math.c
 	src/AzAudio/mixer.h
 	src/AzAudio/mixer.c
 	src/AzAudio/mixer_gui.c
