--- a/.gitignore
+++ b/.gitignore
@@ -2,8 +2,7 @@ build*/
 .cache
 .vscode
 *.log
-base/compile_commands.json
-tests/*/compile_commands.json
+*compile_commands.json*
 
 # don't include generated binaries
 bin/
