--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -2,3 +2,4 @@ add_subdirectory(mic_test)
 add_subdirectory(spatialize)
 add_subdirectory(limiter)
 add_subdirectory(mixer)
+add_subdirectory(profiling)
