--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -18,9 +18,9 @@ set(CMAKE_CXX_STANDARD 11)
 set(CMAKE_CXX_STANDARD_REQUIRED True)
 
 if (MSVC)
-	add_compile_options(/W3 /arch:AVX2)
+	add_compile_options(/W3)
 else()
-	add_compile_options(-mavx2 -mfma -Wall -Wno-missing-braces -fmax-errors=1)
+	add_compile_options(-Wall -Wno-missing-braces -fmax-errors=1)
 	if (CMAKE_SYSTEM MATCHES Windows)
 		add_compile_options(-D_GLIBCXX_USE_NANOSLEEP)
 		add_link_options(-static-libgcc -static-libstdc++ -static -Llibwinpthread-1.dll)
