Implement some specialized reinterlace and improve existing deinterlace impls

--- a/base/CMakeLists.txt
+++ b/base/CMakeLists.txt
@@ -68,6 +68,7 @@ add_library(AzAudio STATIC
 	${BACKEND_SOURCES}
 	# specialized implementations
 	src/AzAudio/specialized/azaBufferDeinterlace.c
+	src/AzAudio/specialized/azaBufferReinterlace.c
 )
 
 set_target_properties(AzAudio PROPERTIES
