Massive refactor stage 1: azaBuffer and azaDSP changes and file restructuring

--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,11 @@ build*/
 *compile_commands.json*
 switchto*
 
+# There might be some loose reaper projects around for analysis purposes
+reaper/
+
 # don't include generated binaries
 bin/
 obj/
+tools/
+misc/
