Add unit_tests test project, with some basic azaBufferResize tests

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -3,3 +3,4 @@ add_subdirectory(spatialize)
 add_subdirectory(limiter)
 add_subdirectory(mixer)
 add_subdirectory(profiling)
+add_subdirectory(unit_tests)
